--- a/Csomagajánlataink.html
+++ b/Csomagajánlataink.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Csomagajánlataink</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
-    <a href="EAindex.html">Főoldal</a>
-    <a href="Rolunk.html">Rólunk</a>
-    <a href="Csomagajánlataink.html">Csomagajánlataink</a>
-    <a href="Instax bérlés.html">Instax bérlés</a>
-    <a href="Korábbi munkáink.html">Korábbi munkáink</a>
-    <a href="Instax bérlés.html">Instax bérlés</a>
-    <a href="Kapcsolat.html">Kapcsolat</a>
-
+    <nav>
+        <div class="navEA">
+            <button><a href="EAindex.html">Főoldal</a></button>
+            <button><a href="Rolunk.html">Rólunk</a></button>
+            <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+            <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+            <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+        </div>
+    </nav>
     <h1>Csomag ajánlataink</h1>
 
     <ul>
@@ -52,13 +56,15 @@
             </tr>
         <tfoot>
             <tr>
-                <td colspan="2"> Áraink az ÁFÁ-t is tartalmazzák.</td>
+                <td colspan="2"> Áraink tájékoztató jellegűek, 80 fős esküvő dekorációját tartalmazzák.</td>
             </tr>
         </tfoot>
         </tbody>
 
 
     </table>
+    <table></table>
+
 
 </body>
 
