--- a/EAindex.html
+++ b/EAindex.html
@@ -1,44 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ever After Esküvői Dekoráció</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ever After Esküvői Dekoráció</title>
+  <link rel="stylesheet" href="css\style.css">
 </head>
+
 <body>
-  <a href="EAindex.html" >Főoldal</a>
-     <a href="Rolunk.html" >Rólunk</a>
-     <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-     <a href="Instax bérlés.html" >Instax bérlés</a>
-     <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-      <a href="Instax bérlés.html" >Instax bérlés</a>
-      <a href="Kapcsolat.html" >Kapcsolat</a>
- <img src="IMG/Ever After logo.png" alt="EA logó">
-  <h1> Üdvözöllek Kedves Látogató,</h1>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
 
-<h1> Kedves Menyasszony és Vőlegény!</h1>
-<h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
+  </div>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
 
-<p>Ever After Esküvői Dekor egy olyan főként esküvő dekorálásra szakosodott vállalkozás, amely szeretné, 
-  hogy minden jegyes pár az általa megálmodott csodálatos környezetben mondhassa ki az életüket összekötő boldogító igent,
-   anélkül, hogy aggódniuk kellene a dekorációval járó tervezési szervezési feladatok miatt és ezáltal arra figyelhessenek 
-   mind az esküvő előtti időszakban és az esküvő napján is, ami a legfontosabb: egymásra.</p>
+  <h1> Üdvözöllek Kedves Látogató, Kedves Menyasszony és Vőlegény!</h1>
 
-<p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a területen,
-   azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még csodálatosabbá varázsolni a házasságkötésüket. 
-   A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk minden munkánk során, 
-  a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben elhelyezett utolsó virágsziromig
-<p> <b>Miért bízd ránk a dekorációt?</b></p> 
-<ul>
-  <li>a Ti álmaitokat fogjuk megvalósítani</li>
-  <li>részletekbe menő odafigyeléssel dolgozunk</li>
-  <li>ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
-  <li>fiatalos lendület</li>
-  <li>fiatalos lendület</li>
- 
-</ul>
-</p>
+  <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
+
+  <div><img class="szövegkép" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
+
+  <div class="dobozdiv">
+    <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
+    <p> Az <span class="bold">Ever After Esküvői Dekor </span>egy olyan főként esküvő dekorálásra szakosodott vállalkozás,
+      amely szeretné,
+      hogy minden jegyes pár az általa megálmodott csodálatos környezetben mondhassa ki az életüket összekötő boldogító
+      igent,
+      anélkül, hogy aggódniuk kellene a dekorációval járó tervezési szervezési feladatok miatt és ezáltal arra
+      figyelhessenek
+      mind az esküvő előtti időszakban és az esküvő napján is, ami a legfontosabb: egymásra.</p>
+    <p>
+      Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
+      területen,
+      azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még
+      csodálatosabbá varázsolni a házasságkötésüket. </p>
+  </div>
+  <div class="dobozdiv">
+    <p> A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk
+      minden munkánk során,
+      a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben elhelyezett utolsó
+      virágsziromig.</p>
+  </div>
+
+
+  <img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1">
+
+  <p> <b>Miért bízd ránk a dekorációt?</b></p>
+  <ul>
+    <li>A Ti álmaitokat fogjuk megvalósítani</li>
+    <li>Részletekbe menő odafigyeléssel dolgozunk</li>
+    <li>Ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
+    <li>fiatalos lendület</li>
+    <li>fiatalos lendület</li>
+  </ul>
+
+  <img class="szövegkép" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+  </p>
+  <h1>Kapcsolat</h1>
+  <p class="idézet">"Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az
+    alábbi űrlapot és felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
+  <p class="üdv"> Üdvözlettel:</p>
+  <p class="signo">Horváthné Forgács Eszter</p>
+
 
 </body>
+
 </html>
