--- a/Instax bérlés.html
+++ b/Instax bérlés.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instax bérlés</title>
-</head>
-<body>
 
-  <a href="EAindex.html" >Főoldal</a>
-  <a href="Rolunk.html" >Rólunk</a>
-  <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-  <a href="Instax bérlés.html" >Instax bérlés</a>
-  <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-   <a href="Instax bérlés.html" >Instax bérlés</a>
-   <a href="Kapcsolat.html" >Kapcsolat</a>
-  <h1>Instax Bérlés  </h1>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instax bérlés</title>
+  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css\bootstrap.min">
+</head>
+
+<body>
+  <nav>
+    <div class="navEA">
+        <button><a href="EAindex.html">Főoldal</a></button>
+        <button><a href="Rolunk.html">Rólunk</a></button>
+        <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+        <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+        <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+        <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+        <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+</nav>
+  <h1>Instax Bérlés </h1>
+  
+<div class="container text-center">
+    <div class="row">
+      <div class="col-sm">
+        <button><a href="EAindex.html">Főoldal</a></button>
+      </div>
+      <div class="col-sm">
+        <button><a href="Rolunk.html">Rólunk</a></button>
+      </div>
+      <div class="col-sm">
+        <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      </div>
+    </div>
+  </div>
 
 </body>
+
 </html>
