--- a/Kapcsolat.html
+++ b/Kapcsolat.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kapcsolat</title>
-</head>
-<body>
-    <a href="EAindex.html" >Főoldal</a>
-    <a href="Rolunk.html" >Rólunk</a>
-    <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-    <a href="Instax bérlés.html" >Instax bérlés</a>
-    <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-     <a href="Instax bérlés.html" >Instax bérlés</a>
-     <a href="Kapcsolat.html" >Kapcsolat</a>
 
-   <h1>Kapcsolat</h1>
-  
-  
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kapcsolat</title>
+  <link rel="stylesheet" href="css\style.css">
+</head>
+
+<body>
+  <nav>
+    <div class="navEA">
+        <button><a href="EAindex.html">Főoldal</a></button>
+        <button><a href="Rolunk.html">Rólunk</a></button>
+        <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+        <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+        <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+        <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+        <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+</nav>
+  <h1>Kapcsolat</h1>
+  <p>Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az alábbi űrlapot és
+    felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
+  <p class="üdv">Üdvözlettel:</p>
+  <p class="signo">Horváthné Forgács Eszter</p>
+
+
+
+  </p>
 </body>
+
 </html>
