--- a/Rolunk.html
+++ b/Rolunk.html
@@ -6,18 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rólunk</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="EAindex.html">Főoldal</a></li>
-        <li><a href="Rolunk.html">Rólunk</a></li>
-        <li><a href="Csomagajánlataink.html">Csomagajánlataink</a></li>
-        <li><a href="Instax bérlés.html">Instax bérlés</a></li>
-        <li><a href="Korábbi munkáink.html">Korábbi munkáink</a></li>
-        <li><a href="Instax bérlés.html">Instax bérlés</a></li>
-        <li><a href="Kapcsolat.html">Kapcsolat</a></li>
-    </ul>
+    <nav>
+        <div class="navEA">
+            <button><a href="EAindex.html">Főoldal</a></button>
+            <button><a href="Rolunk.html">Rólunk</a></button>
+            <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+            <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+            <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+        </div>
+    </nav>
+
     <h1>Rólunk</h1>
     <p>Mint bemutatkozó szövegünkben említettük egy friss startup vállalkozásként tekintünk magunkra és testvéri-baráti
         összefogással hoztuk létre kisvállalkozói csapatunkat.
