--- a/EAindex.html
+++ b/EAindex.html
@@ -31,47 +31,87 @@
 
   <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
 
-  <div><img class="szövegkép" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
 
-  <div class="dobozdiv">
-    <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
-    <p> Az <span class="bold">Ever After Esküvői Dekor </span>egy olyan főként esküvő dekorálásra szakosodott vállalkozás,
-      amely szeretné,
-      hogy minden jegyes pár az általa megálmodott csodálatos környezetben mondhassa ki az életüket összekötő boldogító
-      igent,
-      anélkül, hogy aggódniuk kellene a dekorációval járó tervezési szervezési feladatok miatt és ezáltal arra
-      figyelhessenek
-      mind az esküvő előtti időszakban és az esküvő napján is, ami a legfontosabb: egymásra.</p>
-    <p>
-      Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
-      területen,
-      azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még
-      csodálatosabbá varázsolni a házasságkötésüket. </p>
-  </div>
-  <div class="dobozdiv">
-    <p> A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk
-      minden munkánk során,
-      a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben elhelyezett utolsó
-      virágsziromig.</p>
+  <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
+
+
+  <div class="sor">
+    <div><img class="szövegképjobb" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
+    <div class="dobozdivbal">
+      <p> Az <span class="bold">Ever After Esküvői Dekor </span> csapata felkészült minden lehetetlennek tűnő
+        dekorációs feladatra.</p>
+      <p>Válasszatok minket, Kedves Jegyespár és mindent megteszünk annak érdekében, hogy az általatok megálmodott
+        csodálatos környezetben mondhassátok ki az életteket összekötő
+        boldogító igent.</p>
+      <p> Mindezt pedig análkül, hogy aggódnotok kellene a dekorációval járó beszerzési, szervezési és kivitelezési
+        feladatok
+        miatt, mert megérdemlitek, hogy az esküvő előtti időszakban és főként az esküvő napján, arra figyelhessetek, ami
+        a legfontosabb: <span class="bold">egymásra.</span></p>
+    </div>
   </div>
 
+  <div class="block"> <br clear="right"></div>
+  <div class="sor">
+    <img class="szövegképbal" src="IMG/Kézműves/asztal_FE.jpg" alt="asztal_FE">
+    <div class="dobozdivjobb">
+      <p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
+        területen,
+        azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még
+        csodálatosabbá varázsolni a házasságkötésüket. </p>
+      <p> A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk
+        minden munkánk során, a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben
+        elhelyezett utolsó
+        virágsziromig.</p>
+    </div>
+  </div>
 
-  <img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1">
 
-  <p> <b>Miért bízd ránk a dekorációt?</b></p>
-  <ul>
-    <li>A Ti álmaitokat fogjuk megvalósítani</li>
-    <li>Részletekbe menő odafigyeléssel dolgozunk</li>
-    <li>Ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
-    <li>fiatalos lendület</li>
-    <li>fiatalos lendület</li>
-  </ul>
+  <div class="block"> <br clear="left"></div>
+  <div class="sor">
+    <img class="szövegképjobb2" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1">
+    <div class="dobozdivbal">
+      <p class="bold" style="text-align: left;"> Miért bízd ránk a dekorációt? </p>
+      <ul>
+        <li>A Ti álmaitokat fogjuk megvalósítani</li>
+        <li>Részletekbe menő odafigyeléssel dolgozunk</li>
+        <li>Ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
+        <li>fiatalos lendület</li>
+        <li>fiatalos lendület</li>
+      </ul>
+   <p>Sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésre, csak hogy néhányat említsek: különböző
+        asztaldíszek, szülőköszöntő-, tanú felkérő ajándékok, szertartási kellékek, gyűrűtartók, tortaállványok,
+        autódíszek,
+        virágos hajcsatok, lampionok...stb. A lehetséges dekorválasztékot szinte a végtelenig - vagy legalábbis a
+        kreatív
+        menyasszonyok fantáziájának határáig- sorolhatnánk.</p> </div>
+  </div>
 
-  <img class="szövegkép" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
-  </p>
+
+  <div class="block"> <br clear="right"></div>
+
+  <div class="sor">
+
+    <div class="dobozdivjobb">
+      
+      <p>Természetesen a fentieken kívül is bármit szívesen elkészítünk Nektek, hogy a nagy napotokon minden igazán
+        különleges legyen és a Ti egyéniségeteket tükrözze.</p>
+      <p> A teljes helyszíndekoráláson túl akár fotósarok és Instax mini 11 bérlést is tudunk biztosítani számotokra.
+      </p>
+      <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
+        esküvőtöket!
+      </p>
+      <p>Keressetek minket bátran e-mailen és telefonon!</p>
+    </div>
+
+
+    <img class="szövegképbal2" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+  </div>
+  <div class="block"> <br clear="right"></div>
+  <img class="profilkép" src="IMG/Profil képek/HFE.jpg" alt="Eszter">
   <h1>Kapcsolat</h1>
-  <p class="idézet">"Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az
-    alábbi űrlapot és felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
+  <p class="idézet">"Ha kérdésed van keress meg bizalommal az alábbi elérhetőségeim egyikén vagy töltsd ki
+    a <button><a href="Kapcsolat.html">Kapcsolat</a></button>oldalon található űrlapot és felveszem Veled a
+    kapcsolatot, egy Neked alkalmas időpontban." </p>
   <p class="üdv"> Üdvözlettel:</p>
   <p class="signo">Horváthné Forgács Eszter</p>
 
