--- a/Rolunk.html
+++ b/Rolunk.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
-    <nav>
+    <div class="divEAlogo">
+        <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+        <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+    
+      </div>
+      <nav>
         <div class="navEA">
-            <button><a href="EAindex.html">Főoldal</a></button>
-            <button><a href="Rolunk.html">Rólunk</a></button>
-            <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
-            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-            <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
-            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-            <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+          <button><a href="EAindex.html">Főoldal</a></button>
+          <button><a href="Rolunk.html">Rólunk</a></button>
+          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
         </div>
-    </nav>
+      </nav>
 
     <h1>Rólunk</h1>
     <p>Mint bemutatkozó szövegünkben említettük egy friss startup vállalkozásként tekintünk magunkra és testvéri-baráti
@@ -78,7 +83,7 @@
         Jani mint a csapat legfiatalabb titánja, igazi digitális bennszülött, aki tárgyfotók készítését, az esküvők
         technikai hátterének (hangfalak, projektorok kezelése) biztosítását és fuvarozást is egyaránt vállal.
     </p>
-    <img src="IMG/Profil képek/HFE.jpg" alt="Eszter">
+    <img class="profilkép" src="IMG/Profil képek/HFE.jpg" alt="Eszter">
     <h2>Horváthné Forgács Eszter a szavak mesternője</h2>
     <h3>A szervezési feladatok mellett a kreatív írásban, a szavak mondatok kusza ösvényein sétálva bontakoztatja ki
         leginkább szövegírói tehetségét, így weblapunk szövegei is szinte mind az ő tollából származnak.</h3>
