--- a/Csomagajánlataink.html
+++ b/Csomagajánlataink.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
-    <nav>
+    <div class="divEAlogo">
+        <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+        <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+    
+      </div>
+      <nav>
         <div class="navEA">
-            <button><a href="EAindex.html">Főoldal</a></button>
-            <button><a href="Rolunk.html">Rólunk</a></button>
-            <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
-            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-            <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
-            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-            <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+          <button><a href="EAindex.html">Főoldal</a></button>
+          <button><a href="Rolunk.html">Rólunk</a></button>
+          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
         </div>
-    </nav>
+      </nav>
     <h1>Csomag ajánlataink</h1>
 
     <ul>
