--- a/EAindex.html
+++ b/EAindex.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ever After Esküvői Dekoráció</title>
+
+  <link rel="stylesheet" href="css\bootstrap.css">
   <link rel="stylesheet" href="css\style.css">
 </head>
 
@@ -32,12 +34,12 @@
   <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
 
 
-  <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
+  
 
 
-  <div class="sor">
-    <div><img class="szövegképjobb" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
-    <div class="dobozdivbal">
+  <div class="row align-items-center">
+    <div class="col-12 col-md-8" class="középszöveg">
+      <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
       <p> Az <span class="bold">Ever After Esküvői Dekor </span> csapata felkészült minden lehetetlennek tűnő
         dekorációs feladatra.</p>
       <p>Válasszatok minket, Kedves Jegyespár és mindent megteszünk annak érdekében, hogy az általatok megálmodott
@@ -48,12 +50,13 @@
         miatt, mert megérdemlitek, hogy az esküvő előtti időszakban és főként az esküvő napján, arra figyelhessetek, ami
         a legfontosabb: <span class="bold">egymásra.</span></p>
     </div>
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
   </div>
 
-  <div class="block"> <br clear="right"></div>
-  <div class="sor">
-    <img class="szövegképbal" src="IMG/Kézműves/asztal_FE.jpg" alt="asztal_FE">
-    <div class="dobozdivjobb">
+
+  <div class="row align-items-center">
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Kézműves/asztal_FE.jpg" alt="asztal_FE"></div>
+    <div class="col-12 col-md-8" class="szövegközép">
       <p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
         területen,
         azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még
@@ -63,13 +66,11 @@
         elhelyezett utolsó
         virágsziromig.</p>
     </div>
+
   </div>
 
-
-  <div class="block"> <br clear="left"></div>
-  <div class="sor">
-    <img class="szövegképjobb2" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1">
-    <div class="dobozdivbal">
+  <div class="row align-items-center">
+    <div class="col-12 col-md-8"class="szövegközép">
       <p class="bold" style="text-align: left;"> Miért bízd ránk a dekorációt? </p>
       <ul>
         <li>A Ti álmaitokat fogjuk megvalósítani</li>
@@ -78,35 +79,31 @@
         <li>fiatalos lendület</li>
         <li>fiatalos lendület</li>
       </ul>
-   <p>Sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésre, csak hogy néhányat említsek: különböző
+      <p>Sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésre, csak hogy néhányat említsek: különböző
         asztaldíszek, szülőköszöntő-, tanú felkérő ajándékok, szertartási kellékek, gyűrűtartók, tortaállványok,
         autódíszek,
         virágos hajcsatok, lampionok...stb. A lehetséges dekorválasztékot szinte a végtelenig - vagy legalábbis a
         kreatív
-        menyasszonyok fantáziájának határáig- sorolhatnánk.</p> </div>
-  </div>
-
-
-  <div class="block"> <br clear="right"></div>
-
-  <div class="sor">
-
-    <div class="dobozdivjobb">
-      
-      <p>Természetesen a fentieken kívül is bármit szívesen elkészítünk Nektek, hogy a nagy napotokon minden igazán
-        különleges legyen és a Ti egyéniségeteket tükrözze.</p>
-      <p> A teljes helyszíndekoráláson túl akár fotósarok és Instax mini 11 bérlést is tudunk biztosítani számotokra.
-      </p>
-      <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
-        esküvőtöket!
-      </p>
-      <p>Keressetek minket bátran e-mailen és telefonon!</p>
+        menyasszonyok fantáziájának határáig- sorolhatnánk.</p>
     </div>
-
-
-    <img class="szövegképbal2" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1"></div>
   </div>
-  <div class="block"> <br clear="right"></div>
+
+  <div class="középszöveg">
+    <p>Természetesen a fentieken kívül is bármit szívesen elkészítünk Nektek, hogy a nagy napotokon minden igazán
+      különleges legyen és a Ti egyéniségeteket tükrözze.</p>
+    <p> A teljes helyszíndekoráláson túl akár fotósarok és Instax mini 11 bérlést is tudunk biztosítani számotokra.
+    </p>
+    <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
+      esküvőtöket!
+    </p>
+    <p>Keressetek minket bátran e-mailen és telefonon!</p>
+  </div>
+  <div> <img class="szövegkép" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal"> </div>
+
+
+
+
   <img class="profilkép" src="IMG/Profil képek/HFE.jpg" alt="Eszter">
   <h1>Kapcsolat</h1>
   <p class="idézet">"Ha kérdésed van keress meg bizalommal az alábbi elérhetőségeim egyikén vagy töltsd ki
