--- a/Kapcsolat.html
+++ b/Kapcsolat.html
@@ -31,8 +31,62 @@
     felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
   <p class="üdv">Üdvözlettel:</p>
   <p class="signo">Horváthné Forgács Eszter</p>
+  <h1>Kapcsolat felvétel</h1>
+  <div class="urlap">
+    <form>
+      <legend>Személyes adatok</legend>
+      <fieldset>
+        <div class="urlapmezo">
+          <label for="name">Név: *</label>
+          <input class="input" id="name" type="text" required>
+        </div>
+        <div class="urlapmezo">
+          <label for="Esküvői szerep">Esküvői szerep: *</label>
+          <input class="input" id="Esküvői szerep" type="text" required>
+        </div>
+      </fieldset>
+      <div class="urlapmezo">
+        <label for="time">Esküvő tervezett dátuma : *</label>
+        <input class="input" id="time" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="place">Esküvő tervezett helyszíne : </label>
+        <input class="input" id="place" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="létszám">Tervezett létszám: *</label>
+        <input class="input" id="létszám" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="hívás">Visszahívást kérek: : *</label>
+        <input class="input" id="hívás" type="checkbox" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="phone">Telefonszám *</label>
+        <input class="input" id="phone" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="phone time">Visszahívásra alkalmas időpontok: *</label>
+        <input class="input" id="phone time" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="Megjegyzés">Megjegyzés: </label>
+        <input class="input" id="Megjegyzés" type="text" required>
+      </div>
+
+      <div><button><a href="Kapcsolat.html">Beküld</a></button>
+      </div>
 
 
+    </form>
+
+
+
+
+
+
+
+  </div>
 
   </p>
 </body>
