--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -2,49 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Korábbi munkáink </title>
-    <link rel="stylesheet" href="css\style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Korábbi munkáink </title>
+  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css\bootstrap.min.css">
+
 </head>
 
 <body>
-    <div class="divEAlogo">
-        <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
-        <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
-    
-      </div>
-      <nav>
-        <div class="navEA">
-          <button><a href="EAindex.html">Főoldal</a></button>
-          <button><a href="Rolunk.html">Rólunk</a></button>
-          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
-          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
-          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
-        </div>
-      </nav>
-    <h1>Korábbi munkáink</h1>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
 
-    <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
-    <div calss= "imgSmall"><img src="IMG/Kézműves/ajándék.jpg" alt="ajándék">
+  </div>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
+  <h1>Korábbi munkáink</h1>
 
+  <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
+  <div calss="imgSmall"><img src="IMG/Kézműves/ajándék.jpg" alt="ajándék">
+
+    <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
+    <img src="IMG/Kézműves/kellék.jpg" alt="kellék">
+  </div>
+  <div class="imgBig">
+    </divclass>> <img src="IMG/Kézműves/teremAd.JPG" alt="teremAd">
+    <img src="IMG/Kézműves/asztal_FE.jpg" alt="asztal">
+  </div>
+
+  <div class="imgBig"> <img src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+    <img src="IMG/Kézműves/teremFE.jpg" alt="teremFE">
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
         <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
-        <img src="IMG/Kézműves/kellék.jpg" alt="kellék">
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
     </div>
-    <div class="imgBig"></divclass>> <img src="IMG/Kézműves/teremAd.JPG" alt="teremAd">
-        <img src="IMG/Kézműves/asztal_FE.jpg" alt="asztal">
+  </div>
+
+  <div class="row">
+    <div class="col">
+      1 of 3
     </div>
-
-    <div class="imgBig"> <img src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
-        <img src="IMG/Kézműves/teremFE.jpg" alt="teremFE">
+    <div class="col">
+      2 of 3
     </div>
-
-
-
-
+    <div class="col">
+      3 of 3
+    </div>
 
 </body>
 
